k8s/security/namespace-and-serviceaccounts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
