k8s/security/kyverno-disallow-latest-tag.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationActions:
    - Audit

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  validations:
    - expression: >-
        object.spec.containers.all(c,
          !c.image.endsWith(":latest")
        )
      message: "Container images must not use the :latest tag."
